name:                Limonad
version:             1.2.0.1
synopsis:            limonad is a web interface for Darcs DCVS
-- description:         
homepage:            http://geekschmerzen.org/limonad/
license:             BSD3
license-file:        LICENSE
author:              David Baumgartner
maintainer:          ch.davidbaumgartner@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable limonad
  main-is: Main             
  -- other-modules:       
  build-depends:       base ==4.5.*, MissingH ==1.2.*, parsec ==3.1.*, mime==0.3.*